# shogi-ui

./: .clippy.toml  .gitignore  AI_ENGINE_ANALYSIS.md  AI_IMPROVEMENTS.md  ATTACK_PATTERN_BUG_FIX.md  BUILDING.md  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  build.sh  package-lock.json  package.json  test-usi-implementation.js  test_default_debug.js  test_no_trace.js  test_simple.js  test_tracing.js  test_worker_debug.html  test_worker_error.js  test_worker_simple.js  test_working_trace.js  vite.config.js  vite.config.ts
.github/workflows/: README.md  castle-pattern-tests.yml  nmp-performance-benchmarks.yml  performance-regression.yml  release.yml.example
benches/: aspiration_window_statistics_benchmarks.rs  attack_pattern_performance_benchmarks.rs  bitscan_comprehensive_benchmarks.rs  board_clone_benchmarks.rs  castle_pattern_integration_benchmarks.rs  castle_recognition_cache_benchmarks.rs  component_validation_telemetry_benchmarks.rs  config_performance_benchmarks.rs  debug_logging_performance_benchmarks.rs  dynamic_reduction_formula_benchmarks.rs  endgame_detection_performance_benchmarks.rs  endgame_patterns_performance_benchmarks.rs  endgame_type_detection_benchmarks.rs  evaluation_cache_performance_benchmarks.rs  evaluation_caching_benchmarks.rs  evaluation_performance_optimization_benchmarks.rs  history_heuristic_performance_benchmarks.rs  iid_lmr_coordination_benchmarks.rs  iid_move_extraction_benchmarks.rs  iid_performance_monitoring.rs  killer_move_ordering_performance_benchmarks.rs  lmr_adaptive_tuning_benchmarks.rs  lmr_advanced_reduction_strategies_benchmarks.rs  lmr_consolidation_performance_benchmarks.rs  lmr_enhanced_classification_benchmarks.rs  lmr_escape_move_detection_benchmarks.rs  lmr_move_ordering_effectiveness_benchmarks.rs  lmr_performance_monitoring_benchmarks.rs  lmr_pruning_manager_adaptive_reduction_benchmarks.rs  lmr_re_search_margin_benchmarks.rs  lmr_tt_move_detection_benchmarks.rs  mate_threat_detection_benchmarks.rs  material_evaluation_performance_benchmarks.rs  move_ordering_configuration_performance_benchmarks.rs  move_ordering_performance_benchmarks.rs  move_scoring_performance_benchmarks.rs  move_unmaking_performance_benchmarks.rs  nmp_performance_validation_benchmarks.rs  null_move_performance_monitoring_benchmarks.rs  null_move_verification_performance_benchmarks.rs  (+25 more)
docs/: CLEANUP_PLAN.md  ENGINE_CONFIGURATION_GUIDE.md  ENGINE_UTILITIES_GUIDE.md  MOVE_ORDERING_API.md  MOVE_ORDERING_BEST_PRACTICES.md  MOVE_ORDERING_PERFORMANCE_GUIDE.md  MOVE_ORDERING_TROUBLESHOOTING.md  MOVE_ORDERING_WASM.md  README.md  STANDALONE_USI_ENGINE.md  UTILITIES_QUICK_REFERENCE.md  bit-scanning-api-reference.md  bit-scanning-migration-guide.md
docs/ai/: DESIGN_NULL_MOVE_PRUNING.md  FAQ.md  IMPLEMENT_OPENING_BOOK.md  TASKS_NULL_MOVE_PRUNING.md  TASKS_TAPERED_EVALUATION.md  TROUBLESHOOTING_GUIDE.md  TUNING_SYSTEM_README.md  tasks-DESIGN_ENDGAME_TABLEBASES.md  tasks-DESIGN_SIMD.md
docs/development/: TAURI_MIGRATION_COMPLETION_SUMMARY.md
docs/move-ordering/: README.md
docs/release/: PERFORMANCE_SUMMARY.md
docs/tuning/: material-value-set-workflows.md
examples/: advanced_cache_warming_example.rs  attack_pattern_demo.rs  bit-scanning-examples.rs  comprehensive_test_demo.rs  compressed_entry_storage_example.rs  dynamic_table_sizing_example.rs  ml_replacement_policies_example.rs  move_ordering_usage.rs  multi_level_transposition_table_example.rs  predictive_prefetching_example.rs  tablebase_examples.rs  telemetry_tuning_example.rs  transposition_table_basic_usage.rs  transposition_table_best_practices.rs  transposition_table_configuration_tuning.rs  transposition_table_integration.rs  transposition_table_performance_tuning.rs  transposition_table_troubleshooting.rs  wasm_transposition_table_example.rs  weight_tuning_example.rs
public/piece-themes/: themes.json
src/: App.css  App.jsx  App.tsx  bitboards.rs  debug_utils.rs  error.rs  evaluation.rs  kif_parser.rs  lib.rs  main.rs  moves.rs  opening_book.rs  opening_book_converter.rs  search.rs  time_utils.rs  types.rs  types.ts  usi.rs  weights.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  (+4 more)
tasks/: prd-multi-tier-architecture-refactor.md  status_20250807.md  tasks-prd-multi-tier-architecture-refactor.md  tasks-prd-shogi-game.md
tests/: aspiration_window_critical_fixes_tests.rs  aspiration_window_integration_tests.rs  aspiration_window_optimization_tests.rs  aspiration_window_performance_tests.rs  aspiration_window_performance_validation_tests.rs  aspiration_window_position_type_tests.rs  aspiration_window_regression_tests.rs  aspiration_window_tests.rs  auto_profiling_tests.rs  benchmark_aggregation_tests.rs  benchmark_regression_tests.rs  bitboard_platform_integration_tests.rs  bitscan_comprehensive_tests.rs  bitscan_integration_tests.rs  bitscan_performance_tests.rs  castle_attack_integration_tests.rs  castle_pattern_integration_tests.rs  castle_pattern_regression_tests.rs  center_control_development_tests.rs  code_quality_improvements_tests.rs  component_validation_telemetry_tests.rs  comprehensive_tests.rs  configuration_tests.rs  eval_cache_integration_tests.rs  evaluation_caching_tests.rs  evaluation_component_dependency_tests.rs  evaluation_integration_coordination_tests.rs  evaluation_phase_scaling_tests.rs  evaluation_pipeline_tests.rs  evaluation_tuning_integration_tests.rs  evaluation_weight_balance_tests.rs  external_profiler_tests.rs  horizon_effect_tests.rs  iid_tests.rs  integration_tapered_evaluation_tests.rs  king_safety_and_pawn_structure_tests.rs  king_safety_integration_tests.rs  king_safety_tests.rs  lmr_integration_tests.rs  lmr_optimization_tests.rs  (+65 more)
usi-test-harness/: Cargo.toml  README.md
(+347 files in other folders)
