[package]
name = "shogi-engine"
version = "0.1.0"
edition = "2021"

[lib]
# Keep cdylib for compatibility but not used by Tauri app
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "usi-engine"
path = "src/main.rs"

[[bin]]
name = "tuner"
path = "src/bin/tuner.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.12"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["std"] }
num_cpus = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
debug = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "tablebase_performance_benchmarks"
harness = false

[[bench]]
name = "attack_pattern_performance_benchmarks"
harness = false

[[example]]
name = "attack_pattern_demo"
path = "examples/attack_pattern_demo.rs"