[package]
name = "shogi-engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable verbose debug logging with compile-time checks
# When disabled, expensive string formatting is completely eliminated
verbose-debug = []
# Enable statistics tracking (Task 7.3)
# When disabled, statistics tracking code is compiled out
statistics = []

[lib]
crate-type = ["rlib"]

[[bin]]
name = "usi-engine"
path = "src/main.rs"

[[bin]]
name = "tuner"
path = "src/bin/tuner.rs"

[[bin]]
name = "analyzer"
path = "src/bin/analyzer.rs"

[[bin]]
name = "strength-tester"
path = "src/bin/strength-tester.rs"

[[bin]]
name = "move-assessor"
path = "src/bin/move_assessor.rs"

[[bin]]
name = "puzzle-gen"
path = "src/bin/puzzle_gen.rs"

[dependencies]
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.12"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["std"] }
num_cpus = "1.0"
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
flate2 = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
debug = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "tablebase_performance_benchmarks"
harness = false

[[bench]]
name = "attack_pattern_performance_benchmarks"
harness = false

[[bench]]
name = "parallel_search_performance_benchmarks"
harness = false

[[bench]]
name = "board_clone_benchmarks"
harness = false

[[bench]]
name = "debug_logging_performance_benchmarks"
harness = false

[[bench]]
name = "move_unmaking_performance_benchmarks"
harness = false

[[bench]]
name = "repetition_detection_performance_benchmarks"
harness = false

[[bench]]
name = "move_ordering_performance_benchmarks"
harness = false

[[bench]]
name = "aspiration_window_statistics_benchmarks"
harness = false

[[bench]]
name = "time_management_overhead_benchmarks"
harness = false

[[bench]]
name = "null_move_verification_performance_benchmarks"
harness = false

[[bench]]
name = "endgame_detection_performance_benchmarks"
harness = false

[[bench]]
name = "dynamic_reduction_formula_benchmarks"
harness = false

[[bench]]
name = "mate_threat_detection_benchmarks"
harness = false

[[bench]]
name = "endgame_type_detection_benchmarks"
harness = false

[[bench]]
name = "null_move_performance_monitoring_benchmarks"
harness = false

[[bench]]
name = "nmp_performance_validation_benchmarks"
harness = false

[[bench]]
name = "lmr_consolidation_performance_benchmarks"
harness = false

[[bench]]
name = "lmr_re_search_margin_benchmarks"
harness = false

[[example]]
name = "attack_pattern_demo"
path = "examples/attack_pattern_demo.rs"